unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/ChampifyIo__ChampifyContext__c.object-meta.xml
<CustomObject>
    <label>Champify Label</label>
    <nameField>
        <label>Champify Context</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Champify Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>