unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__ChampifyType__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ChampifyType__c</fullName>
    <label>Champify Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>