unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__CompanyDomain__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__CompanyDomain__c</fullName>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>