unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__CompanyId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__CompanyId__c</fullName>
    <label>Company Id</label>
    <length>26</length>
    <type>Text</type>
</CustomField>