unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__CompanyLinkedInUrl__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__CompanyLinkedInUrl__c</fullName>
    <description>a company&#39;s linked in url</description>
    <label>LinkedIn Url</label>
    <type>Url</type>
</CustomField>