unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__CompanyWebsite__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__CompanyWebsite__c</fullName>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>