unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__Contact__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Champify Contexts</relationshipLabel>
    <relationshipName>ChampifyContexts</relationshipName>
    <type>Lookup</type>
</CustomField>