unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__Employee__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champify Employee</label>
    <referenceTo>ChampifyIo__Employee__c</referenceTo>
    <relationshipLabel>Champify Contexts</relationshipLabel>
    <relationshipName>ChampifyContexts</relationshipName>
    <type>Lookup</type>
</CustomField>