unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__EmployeeEmail__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__EmployeeEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>