unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__EmployeeId__c</fullName>
    <description>Unique identifier of this human&#39;s employment at a company</description>
    <label>Employee Id</label>
    <length>26</length>
    <type>Text</type>
</CustomField>