unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__EmployeeTitle__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__EmployeeTitle__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>