unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__PersonId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__PersonId__c</fullName>
    <description>Unique identifier of a human being</description>
    <label>Person Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>