unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__PersonLinkedInUrl__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__PersonLinkedInUrl__c</fullName>
    <description>linked in url for this person</description>
    <label>LinkedIn Url</label>
    <type>Url</type>
</CustomField>