unpackaged/main/default/objects/ChampifyIo__ChampifyContext__c/fields/ChampifyIo__Relationship__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Relationship__c</fullName>
    <label>Champify Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>